# The-Fire-Rises

./: .gitignore  Cargo.toml  Paleta  README.md  ReglasColores.txt  generarMapaAleatorio.py  map-export.json  map_export.json
assets/: map_topology.json
backend/: Cargo.toml
devtools/: README.md  build_map.sh  index.html  package-lock.json  package.json
devtools/map-editor/: Cargo.toml
devtools/map-editor/src/: lib.rs
devtools/map-editor/src/bridge/: inbound.rs  mod.rs  outbound.rs  state.rs
devtools/map-editor/src/bridge/systems/: assignments.rs  load_image.rs  mod.rs  selection.rs
devtools/map-editor/src/map/: components.rs  events.rs  map_loader.rs  mod.rs
devtools/map-editor/src/map/systems/: camera.rs  events.rs  mod.rs  render.rs  scanner.rs  setup.rs
devtools/map-editor/src/map/systems/interactions/: brush.rs  click_handler.rs  events.rs  handle_map_click.rs  mod.rs  region_handler.rs
devtools/src/: App.vue
devtools/src/components/domain/: GameView.vue
devtools/src/components/domain/management/: StateManagement.vue
devtools/src/components/domain/systems/: BrushSystem.vue
devtools/src/components/layout/: ToolBox.vue
devtools/src/components/ui/input/: ColorInput.vue  FileInput.vue  TextInput.vue
devtools/src/data/: map_test.json
devtools/src/engine/: MapEngine.ts
devtools/src/stores/: engine.ts  states.ts
devtools/src/types/: Map.ts
devtools/web-ui/: .gitignore  index.html  tsconfig.app.json  vite.config.ts
devtools/web-ui/.node_modules/.tmp/: tsconfig.app.tsbuildinfo
devtools/web-ui/src/: App.vue  main.ts  style.css
devtools/web-ui/src/components/domain/: RegionPanel.vue  StateCreator.vue  (+2 more)
devtools/web-ui/src/stores/: map.ts  region.ts  states.ts
devtools/web-ui/src/wasm/: bridge.ts  map_editor.d.ts  map_editor.js  map_editor_bg.wasm.d.ts  map_engine.d.ts  map_engine.js
frontend/: build_map.sh
frontend/map/: Cargo.toml
frontend/map/src/: lib.rs  main.rs
frontend/map/src/bridge/: mod.rs
frontend/map/src/map/: components.rs  mod.rs  systems.rs
frontend/map/src/map/systems/: image_processing.rs  mod.rs  setup.rs
frontend/map/src/map/systems/interactions/: handle_map_click.rs  highlight_selected_province.rs  highlight_state_border.rs
frontend/web-ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/web-ui/src/: App.vue  main.ts
frontend/web-ui/src/stores/: game.ts  map.ts
frontend/web-ui/src/wasm/: bridge.ts  map_engine_bg.wasm.d.ts
shared/src/: lib.rs
(+4 files in other folders)
