[package]
name = "tfr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server y networking
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

# Lógica de juego (ECS)
bevy_ecs = "0.13" # Usamos solo el motor de lógica, sin render