[package]
name = "map-editor"
version = "0.2.0" # Actualizacion. En la herramienta del juego de pintar mapitas, ya se pueden pintar mapitas
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] # cdylib para WASM, rlib para app nativa

[dependencies]
bevy = "0.13"
wasm-bindgen = "0.2"
uuid = { version = "1.12", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json = "1.0"
lazy_static = "1.5.0"

[profile.release]
lto = true
opt-level = 's'


[target.wasm32-unknown-unknown]
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]
