[package]
name = "map-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"] # cdylib para WASM, rlib para app nativa

[dependencies]
bevy = "0.13"
wasm-bindgen = "0.2"
uuid = { version = "1.12", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
lto = true
opt-level = 's'


[target.wasm32-unknown-unknown]
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]